# Conditional-competitiveness-and-conflict-gated-source-selection-of-gridded-precipitation

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
manuscript/: manuscrit.tex
precipbench/: __init__.py  interpolation.py  metrics.py  universe.py
protocol/: benchmark_protocol_v2.md  reproducibility_protocol_v1.md
scripts/: build_ablation_study_v1.py  build_best_eo_vs_best_local_table_v1.py  build_block_bootstrap_sensitivity_v1.py  build_conflict_incremental_analysis_v1.py  build_conflict_policy_extension_v1.py  build_conflict_policy_multiyear_v1.py  build_conflict_policy_spatial_sensitivity_v1.py  build_delta_mae_by_support_score_and_regime_v1.py  build_intense_event_case_v1.py  build_main_figure_package_v1.py  build_primary_slice_sample_sizes_v1.py  build_reviewer_closure_package_v2.py  build_reviewer_hardening_package_v1.py  build_support_density_stress_test_v1.py  build_support_gradient_hardening_v1.py  build_temporal_sensitivity_2022_v1.py  local_support_metrics_v1.py  plot_figure_1_main_v1.py  plot_figure_suite_split_v2.py  regenerate_manuscript_outputs.py  run_delta_mae_block_bootstrap_v1.py
src/: build_best_eo_vs_best_local_table_v1.py  build_block_bootstrap_sensitivity_v1.py  build_conflict_policy_extension_v1.py  build_conflict_policy_multiyear_v1.py  build_conflict_policy_spatial_sensitivity_v1.py  build_delta_mae_by_support_score_and_regime_v1.py  build_intense_event_case_v1.py  build_main_figure_package_v1.py  build_primary_slice_sample_sizes_v1.py  build_reviewer_closure_package_v2.py  (+5 more)
(+21 files in other folders)
